[package]
name = "roop"
authors = ["MikulasBar"]
version = "0.1.0"
edition = "2021"
description = "Provides attributes to simulate inheritance in Rust"
keywords = ["macro", "utility", "oop"]
license = "MIT"
repository = "https://github.com/MikulasBar/roop"
readme = "README.md"


[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = {version = "2.0.77", features = ["full"]}
